# CUDA-Kernels

./: .gitignore  CMakeLists.txt  README.md  benchmark_GEMM.cu  cuda_intellisense_fix.h  matrix_multiplication.cu  prof.nsys-rep  prof.sqlite  spec.txt  test4.cu  vector_add_explicit.cu
config/: data_config.h  init_data.cu  init_data.h
cpu_reference/: cpu_reference.cpp  cpu_reference.h  validation.cpp  validation.h
enc_temp_folder/d8d7d1f1cc6b268b9dedac5f9e2c1a2c/: test.cu
helpers/: cuda_helpers.h
kernels/: kernels.cu  kernels.h
timer/: timer.h
